--- a/src/main.global.css
+++ b/src/main.global.css
@@ -28,6 +28,7 @@ body {
   color: var(--black);
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: transparent;
   -moz-osx-font-smoothing: grayscale;
 }
 
