--- a/src/shared/CardsList/Card/Menu/menu.css
+++ b/src/shared/CardsList/Card/Menu/menu.css
@@ -5,35 +5,6 @@
   padding: 0;
 }
 
-.menuItemsList {
-  padding: 0 20px;
-}
-
-.menuItem {
-  padding: 10px 0;
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  cursor: pointer;
-  background-color: white;
-}
-
-.smHidden {
-  display: none;
-}
-
-.menuItem span {
-  color: var(--grey99);
-}
-
-.menuItem:not(:last-child) {
-  border-bottom: 1px solid var(--greyEC);
-}
-
-.menuItem>svg+span {
-  margin-left: 7px;
-}
-
 .dropdown {
   position: absolute;
   z-index: 100;
@@ -42,6 +13,14 @@
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   border-radius: 3px;
   background-color: var(--white);
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity .2s ease, transform .2s ease;
+}
+
+.dropdown.dropdownIsActive {
+  opacity: 1;
+  transform: none;
 }
 
 .closeBtn {
@@ -55,17 +34,27 @@
 }
 
 .menuBtn {
+  position: relative;
   width: 31px;
   height: 31px;
   display: flex;
   align-items: center;
   justify-content: center;
   transform: rotate(90deg);
-  border-radius: 50%;
 }
 
-.menuBtn:active,
-.menuBtnIsActive {
+.menuBtn::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  border-radius: 50%;
+  background-color: transparent;
+  transform: scale(0);
+  transition: background-color .2s ease, transform .2s ease;
+}
+
+.menuBtnIsActive::before {
+  transform: scale(1);
   background-color: rgba(51, 51, 51, 0.1);
 }
 
@@ -85,23 +74,11 @@
     align-self: center;
     transform: unset;
   }
-
-  .smHidden {
-    display: flex;
-  }
 }
 
 @media all and (min-width: 1540px) {
-  .menuBtn:hover {
+  .menuBtn:hover::before {
     background-color: rgba(51, 51, 51, 0.1);
-  }
-
-  .menuItemsList {
-    padding: 10px 20px;
-  }
-
-  .menuItem {
-    padding: 6px 0;
   }
 
   .closeBtn {
