--- a/src/shared/CardsList/Card/card.css
+++ b/src/shared/CardsList/Card/card.css
@@ -1,5 +1,6 @@
 .card {
   position: relative;
+  margin-top: -1px;
   background-color: var(--white);
   border-radius: 7px;
   padding: 20px 20px 10px;
