--- a/src/shared/CardsList/Card/Menu/ItemsList/itemslist.css
+++ b/src/shared/CardsList/Card/Menu/ItemsList/itemslist.css
@@ -6,7 +6,7 @@
   padding: 10px 0;
   display: flex;
   flex-flow: row nowrap;
-  align-items: center;
+  align-items: flex-end;
   cursor: pointer;
 }
 
