--- a/src/shared/CardsList/cardslist.scss
+++ b/src/shared/CardsList/cardslist.scss
@@ -1,4 +1,6 @@
-@media all and (min-width: 1024px) {
+@import '../../variables';
+
+@media all and (min-width: $tabletWidth) {
   .cardsList {
     padding: 40px 0;
   }
@@ -8,9 +10,8 @@
   }
 }
 
-@media all and (min-width: 1540px) {
+@media all and (min-width: $desctopWidth) {
   .cardsList>li {
     margin-bottom: 0;
   }
 }
-
