--- a/src/shared/Header/SearchBlock/searchblock.scss
+++ b/src/shared/Header/SearchBlock/searchblock.scss
@@ -1,16 +1,18 @@
+@import '../../../variables';
+
 .searchBlock {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
   padding: 14px 20px;
-  background-color: var(--white);
+  background-color: $white;
   border-radius: 0 0 7px 7px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   margin: 0 0 38px;
 }
 
-@media all and (min-width: 1024px) {
+@media all and (min-width: $tabletWidth) {
   .searchBlock {
     padding: 0;
     margin: 0 0 0 auto;
