--- a/src/shared/Header/SortBlock/sortblock.scss
+++ b/src/shared/Header/SortBlock/sortblock.scss
@@ -1,11 +1,13 @@
+@import '../../../variables';
+
 .sortBlock {
-  background-color: var(--white);
+  background-color: $white;
   padding: 11px 20px;
   border-radius: 7px;
   margin: 0 0 20px;
 }
 
-@media all and (min-width: 1024px) {
+@media all and (min-width: $tabletWidth) {
   .sortBlock {
     background-color: transparent;
     padding: 0;
