--- a/src/shared/CardsList/Card/Controls/ActionBtns/actionbtns.scss
+++ b/src/shared/CardsList/Card/Controls/ActionBtns/actionbtns.scss
@@ -1,3 +1,5 @@
+@import '../../../../../variables';
+
 .actions {
   display: flex;
   flex-flow: row nowrap;
@@ -7,7 +9,7 @@
   margin: 0 0 0 13px;
 }
 
-@media all and (min-width: 1024px) {
+@media all and (min-width: $tabletWidth) {
   .actions {
     display: none;
   }
