--- a/src/shared/CardsList/Card/Controls/controls.scss
+++ b/src/shared/CardsList/Card/Controls/controls.scss
@@ -1,3 +1,5 @@
+@import '../../../../variables';
+
 .controls {
   position: relative;
   display: flex;
@@ -6,7 +8,7 @@
   align-items: center;
 }
 
-@media all and (min-width: 1024px) {
+@media all and (min-width: $tabletWidth) {
   .controls {
     order: 3;
     flex: 0 0;
