--- a/src/shared/CardsList/Card/Menu/ItemsList/itemslist.scss
+++ b/src/shared/CardsList/Card/Menu/ItemsList/itemslist.scss
@@ -1,3 +1,5 @@
+@import '../../../../../variables';
+
 .menuItemsList {
   padding: 0 20px;
 }
@@ -15,24 +17,24 @@
 }
 
 .menuItem span {
-  color: var(--grey99);
+  color: $grey99;
 }
 
 .menuItem:not(:last-child) {
-  border-bottom: 1px solid var(--greyEC);
+  border-bottom: 1px solid $greyEC;
 }
 
 .menuItem>svg+span {
   margin-left: 7px;
 }
 
-@media all and (min-width: 1024px) {
+@media all and (min-width: $tabletWidth) {
   .smHidden {
     display: flex;
   }
 }
 
-@media all and (min-width: 1540px) {
+@media all and (min-width: $desctopWidth) {
   .menuItemsList {
     padding: 10px 20px;
   }
