--- a/src/shared/CardsList/Card/TextContent/textcontent.scss
+++ b/src/shared/CardsList/Card/TextContent/textcontent.scss
@@ -1,3 +1,5 @@
+@import '../../../../variables';
+
 .textContent {
   display: flex;
   flex-flow: row wrap;
@@ -7,9 +9,9 @@
   padding: 7px 0 0;
 }
 
-@media all and (min-width: 1024px) {
+@media all and (min-width: $tabletWidth) {
   .textContent {
-    flex-basis: 540px;
+    flex-basis: 350px;
     order: 1;
     margin: 0 0 0 38px;
     flex-flow: column-reverse nowrap;
@@ -21,7 +23,13 @@
   }
 }
 
-@media all and (min-width: 1100px) {
+@media all and (min-width: 1024px) {
+  .textContent {
+    flex-basis: 540px;
+  }
+}
+
+@media all and (min-width: $desctopWidth) {
   .textContent {
     flex-basis: 672px;
   }
