--- a/src/shared/Header/header.scss
+++ b/src/shared/Header/header.scss
@@ -1,4 +1,6 @@
-@media all and (min-width: 1024px) {
+@import '../../variables';
+
+@media all and (min-width: $tabletWidth) {
   .header {
     display: flex;
     flex-flow: row nowrap;
@@ -7,7 +9,7 @@
   }
 }
 
-@media all and (min-width: 1540px) {
+@media all and (min-width: $desctopWidth) {
   .header {
     padding: 67px 0;
   }
