--- a/src/shared/CardsList/Card/card.scss
+++ b/src/shared/CardsList/Card/card.scss
@@ -23,11 +23,10 @@
   padding: 13px 0 0;
 }
 
-.card h2 {
+.card h2 a {
   transition: color .2s ease;
 }
 
-.card:hover h2 a,
 .card:focus-within h2 a {
   color: $orange;
 }
@@ -55,10 +54,15 @@
     max-height: 147px;
     cursor: pointer;
     border-radius: 0;
+
+    &:hover,
+    &:focus-within {
+      outline: 1px solid $greyD9;
+    }
+
   }
 
-  .card:hover,
-  .card:focus-within {
-    outline: 1px solid $greyD9;
+  .card:hover h2 a {
+    color: $orange;
   }
 }
