--- a/src/shared/CardsList/Card/TextContent/PostTitle/posttitle.scss
+++ b/src/shared/CardsList/Card/TextContent/PostTitle/posttitle.scss
@@ -17,10 +17,7 @@
 .postLink::after {
   content: '';
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  inset: 0;
 }
 
 @media all and (min-width: $tabletWidth) {
