Dropdown component implemented with portal.

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -14,4 +14,4 @@ $grey99: hsl(0, 0%, calc($whiteLightness - 40%));
 $grey66: hsl(0, 0%, calc($whiteLightness - 60%));
 
 $tabletWidth: 768px;
-$desctopWidth: 1240px;
+$desktopWidth: 1240px;
