--- a/src/shared/CardsList/Card/Controls/KarmaCounter/karmacounter.scss
+++ b/src/shared/CardsList/Card/Controls/KarmaCounter/karmacounter.scss
@@ -27,7 +27,7 @@
   }
 }
 
-@media all and (min-width: $desctopWidth) {
+@media all and (min-width: $desktopWidth) {
 
   .karmaCounter>button.up>svg>path,
   .karmaCounter>button.down>svg>path {
