--- a/src/shared/CardsList/Card/Menu/ItemsList/itemslist.scss
+++ b/src/shared/CardsList/Card/Menu/ItemsList/itemslist.scss
@@ -34,7 +34,7 @@
   }
 }
 
-@media all and (min-width: $desctopWidth) {
+@media all and (min-width: $desktopWidth) {
   .menuItemsList {
     padding: 10px 20px;
   }
