--- a/src/shared/CardsList/Card/TextContent/textcontent.scss
+++ b/src/shared/CardsList/Card/TextContent/textcontent.scss
@@ -29,7 +29,7 @@
   }
 }
 
-@media all and (min-width: $desctopWidth) {
+@media all and (min-width: $desktopWidth) {
   .textContent {
     flex-basis: 672px;
   }
