--- a/src/shared/CardsList/Card/card.scss
+++ b/src/shared/CardsList/Card/card.scss
@@ -48,7 +48,7 @@
   }
 }
 
-@media all and (min-width: $desctopWidth) {
+@media all and (min-width: $desktopWidth) {
   .card {
     padding: 20px 60px;
     max-height: 147px;
