--- a/src/shared/CardsList/cardslist.scss
+++ b/src/shared/CardsList/cardslist.scss
@@ -10,7 +10,7 @@
   }
 }
 
-@media all and (min-width: $desctopWidth) {
+@media all and (min-width: $desktopWidth) {
   .cardsList>li {
     margin-bottom: 0;
   }
