--- a/src/shared/Content/content.scss
+++ b/src/shared/Content/content.scss
@@ -1,7 +1,8 @@
-/* .content {
-  overflow: hidden;
-} */
 @import '../../variables';
+
+.content {
+  overflow: hidden;
+}
 
 @media all and (min-width: $tabletWidth) {
   .content {
