--- a/src/shared/CardsList/Card/Menu/menu.scss
+++ b/src/shared/CardsList/Card/Menu/menu.scss
@@ -31,8 +31,8 @@
 
 .dropdown {
   position: absolute;
-  right: 0;
-  top: 10px;
+  // right: 0;
+  // top: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   border-radius: 3px;
   background-color: $white;
@@ -91,7 +91,7 @@
   }
 }
 
-@media all and (min-width: $desctopWidth) {
+@media all and (min-width: $desktopWidth) {
   .menuBtn:hover::before {
     transform: scale(1);
     background-color: rgba(51, 51, 51, 0.1);
