--- a/src/shared/Header/header.scss
+++ b/src/shared/Header/header.scss
@@ -9,7 +9,7 @@
   }
 }
 
-@media all and (min-width: $desctopWidth) {
+@media all and (min-width: $desktopWidth) {
   .header {
     padding: 67px 0;
   }
