--- a/src/shared/Post/post.scss
+++ b/src/shared/Post/post.scss
@@ -1,9 +1,21 @@
-.modal {
+@import '../../variables';
+
+.modalWrapper {
   position: fixed;
-  left: 50%;
-  top: 10%;
-  transform: translateX(-50%);
+  inset: 0;
+  padding: 40px;
+  z-index: 900;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  overflow-y: scroll;
+}
+
+.modal {
+  display: none;
+  position: relative;
   z-index: 1000;
+  margin: auto auto;
   overflow-x: hidden;
   overflow-y: auto;
   background: #FFFFFF;
@@ -11,9 +23,31 @@
   border-radius: 7px;
   min-width: 200px;
   min-height: 160px;
-  max-width: 80%;
+  max-width: 70%;
   padding: 24px;
   margin-bottom: 25px;
+}
+
+.modal-enter {
+  opacity: 0;
+  transform: scale(.5);
+}
+
+.modal-enter-active {
+  opacity: 1;
+  transform: none;
+  transition: opacity .2s ease, transform .2s ease;
+}
+
+.modal-exit {
+  opacity: 1;
+  transform: none;
+}
+
+.modal-exit-active {
+  opacity: 0;
+  transform: scale(.5);
+  transition: opacity .2s ease, transform .2s ease;
 }
 
 .content {
@@ -26,4 +60,16 @@
   height: 40px;
   margin: -24px;
   color: #000
+}
+
+.closeBtn {
+  position: absolute;
+  top: 30px;
+  right: 20px;
+}
+
+@media all and (min-width: $tabletWidth) {
+  .modal {
+    display: block;
+  }
 }
