--- a/src/shared/Post/post.scss
+++ b/src/shared/Post/post.scss
@@ -7,7 +7,8 @@
   z-index: 900;
   width: 100vw;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  justify-content: center;
   overflow-y: scroll;
 }
 
@@ -15,15 +16,12 @@
   display: none;
   position: relative;
   z-index: 1000;
-  margin: auto auto;
   overflow-x: hidden;
   overflow-y: auto;
   background: #FFFFFF;
   box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.15);
   border-radius: 7px;
-  min-width: 200px;
-  min-height: 160px;
-  max-width: 70%;
+  width: 70%;
   padding: 24px;
   margin-bottom: 25px;
 }
@@ -46,7 +44,7 @@
 
 .modal-exit-active {
   opacity: 0;
-  transform: scale(.5);
+  transform: scale(1.5);
   transition: opacity .2s ease, transform .2s ease;
 }
 
@@ -54,13 +52,17 @@
   overflow-y: auto;
 }
 
-.close {
-  align-self: flex-end;
-  width: 40px;
-  height: 40px;
-  margin: -24px;
-  color: #000
+.preview {
+  width: 100%;
 }
+
+// .close {
+//   align-self: flex-end;
+//   width: 40px;
+//   height: 40px;
+//   margin: -24px;
+//   color: #000
+// }
 
 .closeBtn {
   position: absolute;
