--- a/src/shared/Post/post.scss
+++ b/src/shared/Post/post.scss
@@ -28,7 +28,7 @@
 
 .modal-enter {
   opacity: 0;
-  transform: scale(.5);
+  transform: translateX(-150px);
 }
 
 .modal-enter-active {
@@ -44,7 +44,7 @@
 
 .modal-exit-active {
   opacity: 0;
-  transform: scale(.5);
+  transform: translateX(-150px);
   transition: opacity .2s ease, transform .2s ease;
 }
 
