--- a/src/shared/Post/post.scss
+++ b/src/shared/Post/post.scss
@@ -1,31 +1,5 @@
 @import '../../variables';
 
-.modalWrapper {
-  position: fixed;
-  inset: 0;
-  padding: 40px;
-  z-index: 900;
-  width: 100vw;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  overflow-y: scroll;
-}
-
-.modal {
-  display: none;
-  position: relative;
-  z-index: 1000;
-  overflow-x: hidden;
-  overflow-y: auto;
-  background: #FFFFFF;
-  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.15);
-  border-radius: 7px;
-  width: 70%;
-  padding: 24px;
-  margin-bottom: 25px;
-}
-
 .modal-enter {
   opacity: 0;
   transform: translateX(-150px);
@@ -46,6 +20,10 @@
   opacity: 0;
   transform: translateX(-150px);
   transition: opacity .2s ease, transform .2s ease;
+}
+
+.container {
+  overflow-y: scroll;
 }
 
 .header {
@@ -84,8 +62,3 @@
   right: 20px;
 }
 
-@media all and (min-width: $tabletWidth) {
-  .modal {
-    display: block;
-  }
-}
