Reply functionality implemented.

--- a/src/shared/Modal/modal.scss
+++ b/src/shared/Modal/modal.scss
@@ -25,7 +25,7 @@
   margin-bottom: 25px;
 }
 
-@media all and (min-width: $tabletWidth) {
+@media all and (min-width: $desktopWidth) {
   .modal {
     display: block;
   }
