--- a/src/shared/Post/CommentsBlock/commentsblock.scss
+++ b/src/shared/Post/CommentsBlock/commentsblock.scss
@@ -24,22 +24,34 @@
 .arrowDown {
   width: fit-content;
   transform: rotate(180deg);
-  margin-top: 10px;
+  margin-top: 4px;
 }
 
 .bar {
   width: 3px;
-  height: calc(100% - 40px);
+  height: calc(100% - 90px);
   background-color: $greyD9;
   margin: 0 auto;
 }
 
-.metaData {
+.metaDataContainer {
   margin-bottom: 15px;
+  height: 30px;
+  position: relative;
+
+  .metaData {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
 
 .commentBody {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+
+  p {
+    word-break: break-word;
+  }
 }
 
 .controls {
@@ -63,4 +75,28 @@
 .menuItem {
   display: flex;
   align-items: center;
+}
+
+
+.reply-enter {
+  opacity: 0;
+  transform: scale(0);
+}
+
+.reply-enter-active {
+  opacity: 1;
+  transform: none;
+  transform-origin: top;
+  transition: all .2s ease;
+}
+
+.reply-exit {
+  opacity: 1;
+  transform: none;
+}
+
+.reply-exit-active {
+  opacity: 0;
+  transform: scale(0);
+  transition: all .2s ease;
 }
