Replies data saving implemented, token and user data moved to redux store.

--- a/src/shared/Post/CommentsBlock/commentsblock.scss
+++ b/src/shared/Post/CommentsBlock/commentsblock.scss
@@ -1,10 +1,14 @@
 @import '../../../variables';
 
+.componentContainer {
+  width: 100%;
+}
+
 .mainWrapper {
   display: flex;
 }
 
-.container {
+.contentContainer {
   flex-grow: 1;
   background-color: $white;
 }
