--- a/src/main.global.scss
+++ b/src/main.global.scss
@@ -4,7 +4,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: $grayF4;
+  background-color: $greyF4;
   font-size: 14px;
   line-height: 16px;
   font-family: 'Roboto', serif;
@@ -36,7 +36,11 @@ button {
   cursor: pointer;
 }
 
-p, h1, h2, h3, h4 {
+p,
+h1,
+h2,
+h3,
+h4 {
   margin: 0;
   padding: 0;
 }
