--- a/src/shared/CardsList/Card/Preview/preview.scss
+++ b/src/shared/CardsList/Card/Preview/preview.scss
@@ -3,7 +3,7 @@
 .preview {
   max-height: 178px;
   margin: 0 -20px;
-  background-color: $grayF4;
+  background-color: $greyF4;
 }
 
 .previewImg {
