--- a/src/shared/Post/CommentForm/commentform.scss
+++ b/src/shared/Post/CommentForm/commentform.scss
@@ -1,6 +1,7 @@
 @import '../../../variables';
 
 .form {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin-bottom: 35px;
@@ -19,16 +20,77 @@
   border-radius: 3px 3px 0px 0px;
   font-size: 16px;
   line-height: 19px;
-  color: #999999;
+  color: $grey66;
   resize: none;
-}
 
-.input[aria-invalid] {
-  border-color: red;
+  &:focus {
+    border: 2px solid $black;
+    outline: none;
+  }
+
+  &::placeholder {
+    color: $grey99;
+  }
+
+  &[aria-invalid],
+  &[aria-invalid]:focus {
+    border: 2px solid $red;
+  }
 }
 
 .controlsWrapper {
   display: flex;
+  margin-bottom: 10px;
+}
+
+.symbolsCounter,
+.errorMessage {
+  position: absolute;
+  bottom: -15px;
+  color: $grey99;
+  font-size: 16px;
+}
+
+.errorMessage {
+  color: $red;
+}
+
+
+.show-enter {
+  opacity: 0;
+  transform: translateY(-10px);
+}
+
+.show-enter-active,
+.show-exit {
+  opacity: 1;
+  transform: none;
+  transition: opacity .2s ease, transform .2s ease;
+}
+
+.show-exit-active {
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: opacity .2s ease, transform .2s ease;
+}
+
+
+.modal-enter {
+  opacity: 0;
+  transform: scale(.5);
+}
+
+.modal-enter-active,
+.modal-exit {
+  opacity: 1;
+  transform: none;
+  transition: opacity .2s ease, transform .2s ease;
+}
+
+.modal-exit-active {
+  opacity: 0;
+  transform: scale(1.5);
+  transition: opacity .2s ease, transform .2s ease;
 }
 
 .markdownBtnsWrapper {
@@ -45,15 +107,10 @@
   height: 50px;
   background: #CC6633;
   border-radius: 0px 0px 3px 0px;
-  // font-weight: 500;
   text-align: center;
   color: #FFFFFF;
 }
 
-.button:disabled {
-  opacity: 0.5;
-  cursor: default;
-}
 
 @media all and (min-width: $desktopWidth) {
   .markdownBtnsWrapper {
