Success message pop up created.

--- a/src/shared/Post/CommentForm/commentform.scss
+++ b/src/shared/Post/CommentForm/commentform.scss
@@ -12,6 +12,12 @@
   }
 }
 
+label {
+  opacity: 0;
+  height: 0;
+  visibility: hidden;
+}
+
 .input {
   height: 89px;
   border: 1px solid #D9D9D9;
