--- a/src/shared/Post/CommentForm/commentform.scss
+++ b/src/shared/Post/CommentForm/commentform.scss
@@ -27,7 +27,7 @@ label {
   font-size: 16px;
   line-height: 19px;
   color: $grey66;
-  resize: none;
+  resize: vertical;
 
   &:focus {
     border: 2px solid $black;
