--- a/src/shared/CardsList/Card/Preview/preview.scss
+++ b/src/shared/CardsList/Card/Preview/preview.scss
@@ -1,12 +1,17 @@
 @import '../../../../variables';
 
 .preview {
-  max-height: 178px;
+  position: relative;
+  height: 178px;
   margin: 0 -20px;
   background-color: $greyF4;
+  overflow: hidden;
 }
 
 .previewImg {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -16,11 +21,12 @@
   object-fit: contain;
   opacity: .2;
   transform: scale(.8);
-  filter: grayscale(1);
+  filter: grayscale(1) !important;
 }
 
 @media all and (min-width: $tabletWidth) {
   .preview {
+    height: 110px;
     flex-basis: 190px;
     order: 0;
     margin: 0;
