Modal adapted for tablet.

--- a/src/shared/CardsList/Card/TextContent/MetaData/metadata.scss
+++ b/src/shared/CardsList/Card/TextContent/MetaData/metadata.scss
@@ -12,10 +12,19 @@
   display: none;
 }
 
-.createdAt,
-.createdAt span {
-  color: $grey99;
+.createdAt {
+  width: min-content;
+
+  span {
+    color: $grey99;
+  }
+
+  span:nth-child(2) {
+    white-space: nowrap;
+  }
+
 }
+
 
 .userLink {
   display: flex;
