--- a/src/shared/CardsList/CardsListLoader/cardslistloader.scss
+++ b/src/shared/CardsList/CardsListLoader/cardslistloader.scss
@@ -34,6 +34,7 @@
     height: 20px;
     width: 60%;
     margin-bottom: 10px;
+    margin-top: 10px;
     background-color: $greyF3;
   }
 
@@ -42,12 +43,6 @@
     height: 11px;
     width: 50%;
     margin-bottom: 10px;
-    background-color: $greyF3;
-  }
-
-  span {
-    height: 15px;
-    width: 100px;
     background-color: $greyF3;
   }
 }
