--- a/src/shared/Post/CommentForm/commentform.scss
+++ b/src/shared/Post/CommentForm/commentform.scss
@@ -1,5 +1,43 @@
 @import '../../../variables';
 
+.show-enter {
+  opacity: 0;
+  transform: translateY(-10px);
+}
+
+.show-enter-active,
+.show-exit {
+  opacity: 1;
+  transform: none;
+  transition: opacity .2s ease, transform .2s ease;
+}
+
+.show-exit-active {
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: opacity .2s ease, transform .2s ease;
+}
+
+
+.modal-enter {
+  opacity: 0;
+  transform: scale(.5);
+}
+
+.modal-enter-active,
+.modal-exit {
+  opacity: 1;
+  transform: none;
+  transition: opacity .2s ease, transform .2s ease;
+}
+
+.modal-exit-active {
+  opacity: 0;
+  transform: scale(1.5);
+  transition: opacity .2s ease, transform .2s ease;
+}
+
+
 .form {
   position: relative;
   display: flex;
@@ -61,55 +99,25 @@ label {
   color: $red;
 }
 
-
-.show-enter {
-  opacity: 0;
-  transform: translateY(-10px);
-}
-
-.show-enter-active,
-.show-exit {
-  opacity: 1;
-  transform: none;
-  transition: opacity .2s ease, transform .2s ease;
-}
-
-.show-exit-active {
-  opacity: 0;
-  transform: translateY(-10px);
-  transition: opacity .2s ease, transform .2s ease;
-}
-
-
-.modal-enter {
-  opacity: 0;
-  transform: scale(.5);
-}
-
-.modal-enter-active,
-.modal-exit {
-  opacity: 1;
-  transform: none;
-  transition: opacity .2s ease, transform .2s ease;
-}
-
-.modal-exit-active {
-  opacity: 0;
-  transform: scale(1.5);
-  transition: opacity .2s ease, transform .2s ease;
-}
-
 .markdownBtnsWrapper {
   display: flex;
   flex-grow: 1;
-  padding: 0 10px;
+  padding: 0 20px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   background-color: $greyE5;
+
+  .markdownBtn:nth-child(n+5):nth-child(-n+12) {
+    display: none;
+  }
+
+  .markdownBtn:not(:last-child) {
+    margin-right: 26px;
+  }
 }
 
 .button {
-  width: 220px;
+  width: 160px;
   height: 50px;
   background: #CC6633;
   border-radius: 0px 0px 3px 0px;
@@ -118,13 +126,23 @@ label {
 }
 
 
+@media all and (min-width: $tabletWidth) {
+  .button {
+    width: 220px;
+  }
+}
+
 @media all and (min-width: $desktopWidth) {
   .markdownBtnsWrapper {
     justify-content: flex-start;
     padding: 0 26px;
-  }
 
-  .markdownBtn:not(:last-child) {
-    margin-right: 26px;
+    .markdownBtn:nth-child(n+5):nth-child(-n+12) {
+      display: inline-block;
+    }
+
+    &>div:nth-child(2) {
+      display: none;
+    }
   }
 }
