--- a/src/shared/Post/CommentsBlock/CommentsBlockLoader/commentsblockloader.scss
+++ b/src/shared/Post/CommentsBlock/CommentsBlockLoader/commentsblockloader.scss
@@ -14,7 +14,6 @@
 
 .upvotes {
   width: 40px;
-  margin-right: 20px;
 }
 
 .arrowsIcons {
@@ -53,16 +52,21 @@
   margin-bottom: 15px;
 
   span:nth-child(1) {
+    width: 130px;
+    height: 13px;
+    margin-right: 7px;
+  }
+
+  span:nth-child(2) {
     width: 20px;
     height: 20px;
     border-radius: 50%;
     margin-right: 7px;
   }
 
-  span:nth-child(2),
   span:nth-child(3) {
     width: 80px;
-    height: 15px;
+    height: 13px;
     margin-right: 7px;
   }
 }
