--- a/src/shared/Post/Stats/StatsDropdown/statsdropdown.scss
+++ b/src/shared/Post/Stats/StatsDropdown/statsdropdown.scss
@@ -23,10 +23,12 @@
 }
 
 .menu {
-  position: absolute;
-  top: 17px;
-  right: 15px;
-  padding: 0;
+  position: relative;
+  order: 2;
+  display: flex;
+  align-items: center;
+  flex: 0 0;
+  margin: 0 0 0 auto;
 }
 
 .dropdown {
@@ -52,8 +54,8 @@
   height: 31px;
   display: flex;
   align-items: center;
+  align-self: center;
   justify-content: center;
-  transform: rotate(90deg);
 }
 
 .menuBtn::before {
@@ -71,22 +73,24 @@
   background-color: rgba(51, 51, 51, 0.1);
 }
 
-@media all and (min-width: $tabletWidth) {
-  .menu {
-    position: relative;
-    order: 2;
-    display: flex;
-    align-items: center;
-    flex: 0 0;
-    top: unset;
-    right: unset;
-    margin: 0 0 0 auto;
-  }
+.menuItemsList {
+  padding: 0 20px;
+}
 
-  .menuBtn {
-    align-self: center;
-    transform: unset;
-  }
+.menuItem {
+  padding: 10px 0;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: flex-end;
+  cursor: pointer;
+}
+
+.menuItem span {
+  color: $grey99;
+}
+
+.menuItem>svg+span {
+  margin-left: 7px;
 }
 
 @media all and (min-width: $desktopWidth) {
@@ -97,5 +101,13 @@
 
   .closeBtn {
     display: none;
+  }
+
+  .menuItemsList {
+    padding: 10px 20px;
+  }
+
+  .menuItem {
+    padding: 6px 0;
   }
 }
