--- a/src/shared/CardsList/Card/TextContent/PostTitle/posttitle.scss
+++ b/src/shared/CardsList/Card/TextContent/PostTitle/posttitle.scss
@@ -1,5 +1,28 @@
 @import '../../../../../variables';
 
+.modal-enter>div {
+  opacity: 0;
+  transform: translateX(-150px);
+}
+
+.modal-enter-active>div {
+  opacity: 1;
+  transform: none;
+  transition: opacity .2s ease, transform .2s ease;
+}
+
+.modal-exit>div {
+  opacity: 1;
+  transform: none;
+}
+
+.modal-exit-active>div {
+  opacity: 0;
+  transform: translateX(-150px);
+  transition: opacity .2s ease, transform .2s ease;
+}
+
+
 .title {
   font-size: 16px;
   line-height: 19px;
