--- a/src/shared/Post/CommentsBlock/ReplyForm/replyform.scss
+++ b/src/shared/Post/CommentsBlock/ReplyForm/replyform.scss
@@ -29,39 +29,41 @@
 
 .controlsWrapper {
   display: flex;
-}
 
-.markdownBtnsWrapper {
-  display: flex;
-  flex-grow: 1;
-  padding: 0 10px;
-  align-items: center;
-  justify-content: space-between;
-  background-color: $greyE5;
-}
-
-.button {
-  width: 220px;
-  height: 50px;
-  background: #CC6633;
-  border-radius: 0px 0px 3px 0px;
-  // font-weight: 500;
-  text-align: center;
-  color: #FFFFFF;
-}
-
-.button:disabled {
-  opacity: 0.5;
-  cursor: default;
-}
-
-@media all and (min-width: $desktopWidth) {
   .markdownBtnsWrapper {
+    display: flex;
+    flex-grow: 1;
+    padding: 0 25px;
+    align-items: center;
     justify-content: flex-start;
-    padding: 0 26px;
+    background-color: $greyE5;
+
+    &>button:not(:last-child) {
+      margin-right: 25px;
+    }
   }
 
-  .markdownBtn:not(:last-child) {
-    margin-right: 26px;
+  .button {
+    width: 220px;
+    height: 50px;
+    background: #CC6633;
+    border-radius: 0px 0px 3px 0px;
+    text-align: center;
+    color: #FFFFFF;
+  }
+}
+
+.controlsWrapperNarrow {
+
+  .markdownBtnsWrapper {
+    padding: 0 10px;
+
+    &>button:not(:last-child) {
+      margin-right: 15px;
+    }
+  }
+
+  .button {
+    width: 100px;
   }
 }
