--- a/src/shared/Post/CommentsBlock/commentsblock.scss
+++ b/src/shared/Post/CommentsBlock/commentsblock.scss
@@ -14,7 +14,7 @@
 }
 
 .upvotes {
-  min-width: 40px;
+  min-width: 30px;
 }
 
 .arrowsIcons {
@@ -107,4 +107,10 @@
   opacity: 0;
   transform: scale(0);
   transition: all .2s ease;
+}
+
+@media all and (min-width: $desktopWidth) {
+  .upvotes {
+    min-width: 40px;
+  }
 }
