--- a/src/shared/CardsList/CardsListLoader/cardslistloader.scss
+++ b/src/shared/CardsList/CardsListLoader/cardslistloader.scss
@@ -14,14 +14,15 @@
 .cardContainer {
   position: relative;
   display: flex;
-  padding: 20px 20px 10px;
+  flex-direction: column;
+  align-items: stretch;
+  padding: 20px 0 10px;
 }
 
 .preview {
-  width: 190px;
-  height: 110px;
-  margin-right: 40px;
+  height: 178px;
   background-color: $greyF3;
+  margin-bottom: 13px;
 }
 
 .textContent {
@@ -29,12 +30,13 @@
   flex-direction: column;
   justify-content: center;
   flex-grow: 1;
+  order: -1;
+  padding: 0 20px;
 
   h2 {
+    order: 1;
     height: 20px;
-    width: 60%;
     margin-bottom: 10px;
-    margin-top: 10px;
     background-color: $greyF3;
   }
 
@@ -47,9 +49,40 @@
   }
 }
 
+.controls {
+  position: relative;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  &>span {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+
+    width: 40px;
+    height: 14px;
+    background-color: $greyF3;
+  }
+
+  &>div:last-child {
+    span {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background-color: $greyF3;
+
+      &:not(:last-child) {
+        margin-right: 15px;
+      }
+    }
+  }
+}
+
 .karmaCounter {
   display: flex;
-  flex-direction: column;
   justify-content: center;
 
   svg:last-child {
@@ -59,7 +92,7 @@
   div {
     width: 30px;
     height: 14px;
-    margin: 5px 0;
+    margin: 5px;
     background-color: $greyF3;
   }
 
@@ -70,12 +103,49 @@
 
 @media all and (min-width: $tabletWidth) {
   .cardContainer {
+    flex-direction: row;
+    align-items: center;
     max-height: 110px;
     padding: 0 40px;
     margin-bottom: 40px;
 
     &:last-child {
       margin-bottom: 0;
+    }
+  }
+
+  .textContent {
+    order: unset;
+
+    h2 {
+      order: unset;
+      width: 60%;
+      margin-top: 10px;
+    }
+  }
+
+  .preview {
+    width: 190px;
+    height: 110px;
+    margin-right: 40px;
+    margin-bottom: 0;
+  }
+
+  .controls {
+    &>span {
+      display: none;
+    }
+
+    &>div:last-child {
+      display: none;
+    }
+  }
+
+  .karmaCounter {
+    flex-direction: column;
+
+    div {
+      margin: 5px 0;
     }
   }
 }
