--- a/src/shared/Post/Stats/stats.scss
+++ b/src/shared/Post/Stats/stats.scss
@@ -30,6 +30,10 @@
 
 @media all and (min-width: $desktopWidth) {
 
+  .container {
+    justify-content: space-between;
+  }
+
   .controlsContainer {
     display: flex;
 
