--- a/src/main.global.scss
+++ b/src/main.global.scss
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 body {
+  width: 100vw;
   padding: 0;
+  padding-right: 20px;
   margin: 0;
   background-color: $greyF4;
   font-size: 14px;
