Express prepared for production.

--- a/src/shared/CardsList/Card/Controls/controls.scss
+++ b/src/shared/CardsList/Card/Controls/controls.scss
@@ -2,6 +2,7 @@
 
 .controls {
   position: relative;
+  z-index: 200;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
