--- a/src/shared/Header/SortBlock/sortblock.scss
+++ b/src/shared/Header/SortBlock/sortblock.scss
@@ -1,6 +1,7 @@
 @import '../../../variables';
 
 .sortBlock {
+  display: none;
   background-color: $white;
   padding: 11px 20px;
   border-radius: 7px;
