--- a/src/main.global.scss
+++ b/src/main.global.scss
@@ -4,7 +4,6 @@
 body {
   width: 100vw;
   padding: 0;
-  padding-right: 20px;
   margin: 0;
   background-color: $greyF4;
   font-size: 14px;
@@ -45,4 +44,10 @@ h3,
 h4 {
   margin: 0;
   padding: 0;
+}
+
+@media all and (min-width: $desktopWidth) {
+  body {
+    padding-right: 20px;
+  }
 }
