--- a/src/shared/Post/post.scss
+++ b/src/shared/Post/post.scss
@@ -53,6 +53,7 @@
   h2 {
     font-weight: 400;
     margin-bottom: 10px;
+    margin-right: 15px;
   }
 }
 
@@ -62,6 +63,14 @@
   padding-bottom: 10px;
   margin-bottom: 15px;
   border-bottom: 1px solid $greyD9;
+}
+
+.postText {
+  margin-bottom: 20px;
+  font-size: 18px;
+  line-height: 32px;
+  white-space: break-spaces;
+  word-break: break-word;
 }
 
 .preview {
@@ -95,8 +104,9 @@
   }
 
   .modal {
-    padding: 24px;
+    padding: 40px;
     border-radius: 7px;
+    overflow: hidden;
   }
 }
 
@@ -108,5 +118,6 @@
 
   .modal {
     width: 80%;
+    padding: 60px;
   }
 }
