--- a/src/shared/CardsList/Card/Menu/ItemsList/itemslist.scss
+++ b/src/shared/CardsList/Card/Menu/ItemsList/itemslist.scss
@@ -4,42 +4,42 @@
   padding: 0 20px;
 }
 
-.menuItem {
-  padding: 10px 0;
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: flex-end;
-  cursor: pointer;
-}
-
-.smHidden {
-  display: none;
-}
-
-.menuItem span {
-  color: $grey99;
-}
-
-.menuItem:not(:last-child) {
+.itemWrapper:not(:last-child) {
   border-bottom: 1px solid $greyEC;
 }
 
-.menuItem>svg+span {
-  margin-left: 7px;
+.menuItem {
+  padding: 12px 0;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  cursor: pointer;
+
+  &.smHidden {
+    display: none;
+  }
+
+  span {
+    color: $grey99;
+  }
+
+  &>svg+span {
+    margin-left: 7px;
+  }
 }
 
 @media all and (min-width: $tabletWidth) {
-  .smHidden {
-    display: flex;
+  .menuItem {
+    padding: 6px 0;
+
+    &.smHidden {
+      display: flex;
+    }
   }
 }
 
 @media all and (min-width: $desktopWidth) {
   .menuItemsList {
     padding: 10px 20px;
-  }
-
-  .menuItem {
-    padding: 6px 0;
   }
 }
